@@ -138,6 +138,12 @@ limitations under the License.
     </div>
     
   </div>
+
+  <div id="connection_status">
+
+    <span>Connection lost …</span>
+
+  </div>
   
   <script type="text/javascript"> var require = { urlArgs: '_=${version}' }; </script>
   <script src="js/require.js?_=${version}" data-main="js/main"></script>
